--- a/_config.yml
+++ b/_config.yml
@@ -44,4 +44,4 @@ defaults:
       layout: fable
 
 # Exclude
-exclude: [bower_components, node_modules, gulpfile.js, package.json]
+exclude: [node_modules, gulpfile.js, package.json]
