--- a/bower.json
+++ b/bower.json
@@ -9,9 +9,11 @@
     "_site"
   ],
   "dependencies": {
-    "reset-scss": "*",
-    "normalize-scss": "~3.0.3",
-    "sanitize-css": "~3.0.0",
-    "typographic": "~2.9.3"
+    "typographic": "~2.9.3",
+    "modular-scale": "~2.1.1",
+    "normalize-css": "~3.0.3",
+    "HTML5-Reset": "~2.1.3",
+    "marx": "~1.3.0",
+    "meyer-reset": "*"
   }
 }
