--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,8 @@
     "tests",
     "_site"
   ],
-  "dependencies": {
-    "typographic": "~2.9.3",
-    "modular-scale": "~2.1.1",
-    "normalize-css": "~3.0.3",
-    "HTML5-Reset": "~2.1.3",
-    "marx": "~1.3.0",
-    "meyer-reset": "*"
+  "dependencies": {},
+  "devDependencies": {
+    "marx": "~1.3.0"
   }
 }
