--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "jekyllbrowsersync",
+  "name": "brochure",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "browser-sync": "^2.10.1",
-    "gulp": "^3.9.0",
-    "gulp-shell": "^0.5.1",
-    "lodash": "^3.10.1"
+    "browser-sync": "latest",
+    "gulp": "latest",
+    "gulp-shell": "latest",
+    "lodash": "latest"
   }
 }
